[init] Rename WHITEBOX_ to wb_
* Clarity.
* Less code.

--- a/apps/half-life-2/app_version_config.h.cmake.in
+++ b/apps/half-life-2/app_version_config.h.cmake.in
@@ -13,12 +13,12 @@
 #define HALF_LIFE_2_VER_PRODUCT_NAME_STR "@PROJECT_NAME@"
 
 // Half-Life 2 file version header.
-#define HALF_LIFE_2_VER_FILE_VERSION_HEADER WHITEBOX_VER_PRODUCT_VERSION_HEADER
+#define HALF_LIFE_2_VER_FILE_VERSION_HEADER WB_VER_PRODUCT_VERSION_HEADER
 // Half-Life 2 file version info.
-#define HALF_LIFE_2_VER_FILE_VERSION_INFO WHITEBOX_VER_PRODUCT_VERSION_INFO
+#define HALF_LIFE_2_VER_FILE_VERSION_INFO WB_VER_PRODUCT_VERSION_INFO
 // Half-Life 2 file version as string.
 #define HALF_LIFE_2_VER_FILE_VERSION_INFO_STR \
-  WHITEBOX_STRINGIFY(HALF_LIFE_2_VER_FILE_VERSION_INFO)
+  WB_STRINGIFY(HALF_LIFE_2_VER_FILE_VERSION_INFO)
 // Half-Life 2 file description.
 #define HALF_LIFE_2_VER_FILE_DESCRIPTION_STR "@PROJECT_DESCRIPTION@"
 
@@ -30,6 +30,6 @@
 // determine whether a file has been renamed by a user.
 #define HALF_LIFE_2_VER_ORIGINAL_NAME_STR \
   HALF_LIFE_2_VER_INTERNAL_NAME_STR ".exe"
-#endif  // WHITEBOX_OS_WIN
+#endif  // WB_OS_WIN
 
 #endif  // !APPS_HALF_LIFE_2_APP_VERSION_CONFIG_H_
