--- a/apps/half-life-2/windows_half_life_2.rc
+++ b/apps/half-life-2/windows_half_life_2.rc
@@ -19,16 +19,16 @@ LANGUAGE LANG_ENGLISH, SUBLANG_DEFAULT
 // Icon with lowest ID value placed first to ensure application icon remains
 // consistent on all systems.
 
-WHITEBOX_HALF_LIFE_2_IDI_MAIN_ICON    ICON   "resources/half-life-2.ico"
-WHITEBOX_HALF_LIFE_2_IDI_SMALL_ICON   ICON   "resources/half-life-2-small.ico"
+WB_HALF_LIFE_2_IDI_MAIN_ICON    ICON   "resources/half-life-2.ico"
+WB_HALF_LIFE_2_IDI_SMALL_ICON   ICON   "resources/half-life-2-small.ico"
 
 // Version info.
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     HALF_LIFE_2_VER_FILE_VERSION_HEADER
-PRODUCTVERSION  WHITEBOX_VER_PRODUCT_VERSION_HEADER
-FILEFLAGSMASK   WHITEBOX_VER_FFI_FILEFLAGSMASK
-FILEFLAGS       WHITEBOX_VER_FILEFLAGS
+PRODUCTVERSION  WB_VER_PRODUCT_VERSION_HEADER
+FILEFLAGSMASK   WB_VER_FFI_FILEFLAGSMASK
+FILEFLAGS       WB_VER_FILEFLAGS
 FILEOS          VOS_NT_WINDOWS32
 FILETYPE        VFT_APP
 FILESUBTYPE     VFT2_UNKNOWN
@@ -37,14 +37,14 @@ BEGIN
     BEGIN
         BLOCK "040904B0"
         BEGIN
-            VALUE "CompanyName",      WHITEBOX_VER_COMPANY_NAME_STR
+            VALUE "CompanyName",      WB_VER_COMPANY_NAME_STR
             VALUE "FileDescription",  HALF_LIFE_2_VER_FILE_DESCRIPTION_STR
             VALUE "FileVersion",      HALF_LIFE_2_VER_FILE_VERSION_INFO_STR
             VALUE "InternalName",     HALF_LIFE_2_VER_INTERNAL_NAME_STR
-            VALUE "LegalCopyright",   WHITEBOX_VER_LEGALCOPYRIGHT_STR
+            VALUE "LegalCopyright",   WB_VER_LEGALCOPYRIGHT_STR
             VALUE "OriginalFilename", HALF_LIFE_2_VER_ORIGINAL_NAME_STR
             VALUE "ProductName",      HALF_LIFE_2_VER_PRODUCT_NAME_STR
-            VALUE "ProductVersion",   WHITEBOX_VER_PRODUCT_VERSION_INFO_STR
+            VALUE "ProductVersion",   WB_VER_PRODUCT_VERSION_INFO_STR
         END
     END
 
