--- a/bootmgr/CMakeLists.txt
+++ b/bootmgr/CMakeLists.txt
@@ -48,7 +48,7 @@ target_compile_definitions(${WB_BOOTMGR_TARGET_NAME}
   PRIVATE WB_BOOTMGR_DLL=1
 )
 
-set(WB_BOOTMGR_DEPENDENT_LINK_LIBRARIES g3log mimalloc)
+set(WB_BOOTMGR_DEPENDENT_LINK_LIBRARIES g3log mimalloc whitebox-kernel)
 set(WB_BOOTMGR_OS_SPECIFIC_LINK_LIBRARIES "")
 
 if (WB_OS_WINDOWS)
