--- a/whitebox-kernel/CMakeLists.txt
+++ b/whitebox-kernel/CMakeLists.txt
@@ -48,7 +48,7 @@ target_compile_definitions(${WB_WHITEBOX_KERNEL_TARGET_NAME}
   PRIVATE WB_WHITEBOX_KERNEL_DLL=1
 )
 
-set(WB_WHITEBOX_KERNEL_DEPENDENT_LINK_LIBRARIES g3log mimalloc)
+set(WB_WHITEBOX_KERNEL_DEPENDENT_LINK_LIBRARIES base g3log mimalloc)
 set(WB_WHITEBOX_KERNEL_OS_SPECIFIC_LINK_LIBRARIES "")
 
 target_link_libraries(${WB_WHITEBOX_KERNEL_TARGET_NAME}
