--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ version: 2
 updates:
   # Enable version updates for submodules.
   - package-ecosystem: "gitsubmodule"
-    # Look for deps in the `root` directory.
+    # Look for deps in the `deps` directory.
     directory: "/deps"
     # Check for updates every day (weekdays).
     schedule:
