--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,7 +2,7 @@
 # Use of this source code is governed by a 3-Clause BSD license that can be
 # found in the LICENSE file.
 
-name: build
+name: build & test
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
           submodules: recursive
 
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/out -DCMAKE_BUILD_TYPE=${{matrix.build}}
+        run: cmake -B ${{github.workspace}}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_BUILD_TYPE=${{matrix.build}} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_MSVC_CXX_LANGUAGE_VERSION="c++latest"
 
       - name: Build on a ${{runner.os}}
         run: cmake --build ${{github.workspace}}/out --config ${{matrix.build}}
@@ -46,7 +46,7 @@ jobs:
           submodules: recursive
 
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/out -DCMAKE_BUILD_TYPE=${{matrix.build}}
+        run: cmake -B ${{github.workspace}}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_BUILD_TYPE=${{matrix.build}} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON
 
       - name: Build on a ${{runner.os}}
         run: cmake --build ${{github.workspace}}/out --config ${{matrix.build}}
@@ -68,7 +68,7 @@ jobs:
           submodules: recursive
 
       - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/out -DCMAKE_BUILD_TYPE=${{matrix.build}}
+        run: cmake -B ${{github.workspace}}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_BUILD_TYPE=${{matrix.build}} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON
 
       - name: Build on a ${{runner.os}}
         run: cmake --build ${{github.workspace}}/out --config ${{matrix.build}}
