--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "deps/g3log"]
 	path = deps/g3log
-	url = git@github.com:dimhotepus/g3log.git
+	url = git@github.com:The-White-Box/g3log.git
 [submodule "deps/mimalloc"]
 	path = deps/mimalloc
-	url = git@github.com:dimhotepus/mimalloc.git
+	url = git@github.com:The-White-Box/mimalloc.git
 [submodule "deps/googletest"]
 	path = deps/googletest
-	url = git@github.com:google/googletest.git
+	url = git@github.com:The-White-Box/googletest.git
