--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -7,7 +7,7 @@
       "inheritEnvironments": [ "msvc_x64_x64" ],
       "buildRoot": "${projectDir}\\out\\build\\${name}",
       "installRoot": "${projectDir}\\out\\install\\${name}",
-      "cmakeCommandArgs": "-Wdev -Werror=dev -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -DADD_FATAL_EXAMPLE=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_MSVC_CXX_LANGUAGE_VERSION=\"c++latest\"",
+      "cmakeCommandArgs": "-Wdev -Werror=dev -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -DADD_FATAL_EXAMPLE=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_MSVC_CXX_LANGUAGE_VERSION=\"c++latest\"",
       "ctestCommandArgs": ""
     },
     {
