--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@
 # Use of this source code is governed by a 3-Clause BSD license that can be
 # found in the LICENSE file.
 
-cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
+
+option(WB_BUILD_TESTS "Build tests or not." OFF)
 
 # Compiler id for Apple Clang is now AppleClang.
 if (POLICY CMP0025)
@@ -39,7 +41,7 @@ if (NOT DEFINED PACKAGE_VERSION)
 endif()
 set(PACKAGE_STRING    "${PACKAGE_NAME} ${PACKAGE_VERSION}")
 set(PACKAGE_TARNAME   "${PACKAGE_NAME}-${PACKAGE_VERSION}")
-set(PACKAGE_BUGREPORT "https://github.com/dimhotepus/whitebox/issues")
+set(PACKAGE_BUGREPORT "https://github.com/The-White-Box/whitebox/issues")
 
 project(${PACKAGE_NAME}
   VERSION ${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}.${PACKAGE_VERSION_PATCH}.${PACKAGE_VERSION_TWEAK}
@@ -64,9 +66,9 @@ else()
 endif()
 
 if (${WB_SYSTEM_NAME} STREQUAL "Windows")
-  set(WB_OS_WINDOWS ON CACHE BOOL "Windows is build system.")
+  set(WB_OS_WIN ON CACHE BOOL "Windows is build system.")
 else()
-  set(WB_OS_WINDOWS OFF CACHE BOOL "Windows is NOT build system.")
+  set(WB_OS_WIN OFF CACHE BOOL "Windows is NOT build system.")
 endif()
 
 set(WB_PRODUCT_NAME "WhiteBox Games Collection" CACHE STRING "Name of the product.")
@@ -82,6 +84,24 @@ set(WB_CONFIGURATION_TYPES "${CMAKE_CONFIGURATION_TYPES}" CACHE STRING "CMake av
 set(WB_CXX_COMPILER_ID "${CMAKE_CXX_COMPILER_ID}" CACHE STRING "Compiler id used to build ${PACKAGE_NAME}.")
 set(WB_CXX_COMPILER_FRONTEND_VARIANT "${CMAKE_CXX_COMPILER_FRONTEND_VARIANT}" CACHE STRING "Compiler frontend used to build ${PACKAGE_NAME}.")
 set(WB_EXPORT_COMPILE_COMMANDS ${CMAKE_EXPORT_COMPILE_COMMANDS} CACHE BOOL "Enable/Disable output of compile commands during generation.")
+
+if (WB_CXX_COMPILER_ID MATCHES "Clang")
+  set(WB_COMPILER_CLANG ON CACHE BOOL "Compiler is Clang.")
+else ()
+  set(WB_COMPILER_CLANG OFF CACHE BOOL "Compiler is NOT Clang.")
+endif ()
+
+if (WB_CXX_COMPILER_ID STREQUAL "GNU")
+  set(WB_COMPILER_GCC ON CACHE BOOL "Compiler is GCC.")
+else ()
+  set(WB_COMPILER_GCC OFF CACHE BOOL "Compiler is NOT GCC.")
+endif ()
+
+if (WB_CXX_COMPILER_ID STREQUAL "MSVC")
+  set(WB_COMPILER_MSVC ON CACHE BOOL "Compiler is MSVC.")
+else ()
+  set(WB_COMPILER_MSVC OFF CACHE BOOL "Compiler is NOT MSVC.")
+endif ()
 
 ## Find common dependencies.
 
@@ -125,7 +145,7 @@ if (XCODE_VERSION)
   message(STATUS "[common]: ${PACKAGE_NAME} using XCode version: ${XCODE_VERSION}.")
 endif()
 
-if (WB_CXX_COMPILER_ID MATCHES "Clang")
+if (WB_COMPILER_CLANG)
   # Clang or AppleClang.
   if (WB_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
     message(STATUS "[common]: ${PACKAGE_NAME} use compiler Clang + MSVC frontend.")
@@ -142,11 +162,11 @@ if (WB_CXX_COMPILER_ID MATCHES "Clang")
     message(FATAL_ERROR "[common]: Using Clang with unknown frontend '${WB_CXX_COMPILER_FRONTEND_VARIANT}'. "
         "Please, define compiler/linker options for it.")
   endif()
-elseif (WB_CXX_COMPILER_ID STREQUAL "GNU")
+elseif (WB_COMPILER_GCC)
   message(STATUS "[common]: ${PACKAGE_NAME} use compiler GNU.")
 
   include(compilers/wb_gcc)
-elseif (WB_CXX_COMPILER_ID STREQUAL "MSVC")
+elseif (WB_COMPILER_MSVC)
   message(STATUS "[common]: ${PACKAGE_NAME} use compiler MSVC.")
   message(STATUS "[common]: ${PACKAGE_NAME} MSVC         version: ${MSVC_VERSION}")
   message(STATUS "[common]: ${PACKAGE_NAME} MSVC toolset version: ${MSVC_TOOLSET_VERSION}")
@@ -172,7 +192,25 @@ configure_file(
 # Dependencies.
 add_subdirectory("deps/g3log")
 
-# add_subdirectory("deps/googletest")
+if (WB_BUILD_TESTS)
+  # For Windows: Prevent overriding the parent project's compiler/linker settings.
+  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+  add_subdirectory("deps/googletest")
+
+  if (WB_COMPILER_MSVC)
+    # Prevent MSVC linker warning as error for __except + /guard:ehcont.
+    target_compile_options(gtest PRIVATE /guard:ehcont)
+    target_link_options(gtest PRIVATE /guard:ehcont)
+  elseif (WB_COMPILER_CLANG OR WB_COMPILER_GCC)
+    # Prevent ld linker warning as error "reloc which may overflow at runtime" (-fPIC).
+    target_compile_options(gtest PRIVATE -fPIC)
+  endif ()
+
+  # Consume GTest as shared library to reduce tests size.
+  target_compile_definitions(gtest PRIVATE GTEST_CREATE_SHARED_LIBRARY=1)
+endif()
+
 add_subdirectory("deps/mimalloc")
 
 # Libraries.
@@ -183,8 +221,9 @@ add_subdirectory("whitebox-kernel")
 # Apps.
 add_subdirectory("apps/half-life-2")
 
-# Tests.
-enable_testing()
+if (WB_BUILD_TESTS)
+  enable_testing()
+endif()
 
 # Get all targets to add mimalloc allocators overrides.
 wb_get_all_targets(WB_ALL_TARGETS "${WB_ROOT_DIR}")
